Complete functions thanh_vien

--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/KhuPho/KhuPho.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/KhuPho/KhuPho.xaml
@@ -26,7 +26,7 @@
         <Label x:Name="lblTitle" Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource Title}" Content="Khu Pho"/>
 
         <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}" Content="Tên khu phố:"/>
-        <TextBox x:Name="txbTenKhuPho" Grid.Row="1" Grid.Column="1" Style="{StaticResource InputText}" Text="{Binding ten_khu_pho, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" MaxLength="50" TextChanged="TextBox_TextChanged" />
+        <TextBox x:Name="txbTenKhuPho" Grid.Row="1" Grid.Column="1" Style="{StaticResource InputText}" MaxLength="50" Text="{Binding ten_khu_pho, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" TextChanged="TextBox_TextChanged" />
 
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
             <Button x:Name="btnOK" Style="{StaticResource ButtonOK}" Width="50" Margin="5,0" IsDefault="True" Click="btnOK_Click" Content="OK"/>
