--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/CLB/CLB.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/CLB/CLB.xaml
@@ -25,8 +25,8 @@
         <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}">Tên câu lạc bộ:</Label>
         <TextBox x:Name="txbTenCLB" Grid.Row="1" Grid.Column="1" Style="{StaticResource InputText}" />
 
-        <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">Người quản lý:</Label>
-        <ComboBox x:Name="cmbQuanLy" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputComboBox}" />
+        <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">Ngày thành lập:</Label>
+        <DatePicker x:Name="dtpNgayThanhLap" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputDatePicker}" />
         
         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
             <Button x:Name="btnOK" Style="{StaticResource ButtonOK}" Width="50" Margin="5,0" IsDefault="True" Click="btnOK_Click">
