--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/Hop/HopThuongNien.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/Hop/HopThuongNien.xaml
@@ -27,10 +27,10 @@
         <ComboBox x:Name="cmbNam" Grid.Row="1" Grid.Column="1" Style="{StaticResource InputComboBox}" />
 
         <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">Lần họp:</Label>
-        <TextBox x:Name="txbLanHop" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputText}" />
+        <ComboBox x:Name="cmbLanHop" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputComboBox}" />
 
         <Label Grid.Row="3" Grid.Column="0" Style="{StaticResource Label}">Nội dung:</Label>
-        <TextBox x:Name="txbNoiDUng" Grid.Row="3" Grid.Column="1" Style="{StaticResource InputText}" />
+        <TextBox x:Name="txbNoiDung" Grid.Row="3" Grid.Column="1" Style="{StaticResource InputText}" />
 
         <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
             <Button x:Name="btnOK" Style="{StaticResource ButtonOK}" Width="50" Margin="5,0" IsDefault="True" Click="btnOK_Click">
