--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/CLB/CLB.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/CLB/CLB.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi.UI.CLB"
         mc:Ignorable="d"
-        Title="Câu lạc bộ" Height="210" Width="400" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+        Title="Câu lạc bộ" Height="250" Width="400" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
 
     </Window.Resources>
@@ -18,6 +18,7 @@
             <RowDefinition Height="45"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="35"></RowDefinition>
         </Grid.RowDefinitions>
         <Label x:Name="lblTitle" Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource Title}" Content="AQqpPHJjkK"></Label>
@@ -27,8 +28,11 @@
 
         <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">Ngày thành lập:</Label>
         <DatePicker x:Name="dtpNgayThanhLap" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputDatePicker}" />
-        
-        <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
+
+        <Label Grid.Row="3" Grid.Column="0" Style="{StaticResource Label}">Người quản lý:</Label>
+        <ComboBox x:Name="cmbQuanLy" Grid.Row="3" Grid.Column="1" Style="{StaticResource InputComboBox}" />
+
+        <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
             <Button x:Name="btnOK" Style="{StaticResource ButtonOK}" Width="50" Margin="5,0" IsDefault="True" Click="btnOK_Click">
                 OK
             </Button>
