--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/TaiKhoan/ResetPassword.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/TaiKhoan/ResetPassword.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.UI.TaiKhoan.DeleteAccount"
+﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.UI.TaiKhoan.ResetPassword"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi.UI.TaiKhoan"
         mc:Ignorable="d"
-        Title="DeleteAccount" Height="170" Width="400" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+       Title="Reset Password" Height="210" Width="400" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
@@ -14,14 +14,18 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="45"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="35"></RowDefinition>
         </Grid.RowDefinitions>
-        <Label x:Name="lblTitle" Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource Title}" Content="Xóa tài khoản"></Label>
+        <Label x:Name="lblTitle" Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource Title}" Content="Reset Password"></Label>
 
         <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}">Tài khoản:</Label>
         <ComboBox x:Name="cmbAccount" Grid.Row="1" Grid.Column="1" Style="{StaticResource InputComboBox}" />
 
-        <StackPanel Grid.Row="2" Grid.Column="2" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
+        <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">Password mới:</Label>
+        <TextBox x:Name="txbNewPassword" Grid.Row="2" Grid.Column="1" Style="{StaticResource InputText}" IsReadOnly="True"/>
+
+        <StackPanel Grid.Row="3" Grid.Column="2" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
             <Button x:Name="btnOK" Style="{StaticResource ButtonOK}" Width="50" Margin="5,0" IsDefault="True" Click="btnOK_Click">
                 OK
             </Button>
